Changes to be committed: 	modified:   bun.lock 	new file:   drizzle/0004_marvelous_valkyrie.sql 	new file:   drizzle/0005_blue_nuke.sql 	new file:   drizzle/0006_sparkling_arachne.sql 	new file:   drizzle/meta/0004_snapshot.json 	new file:   drizzle/meta/0005_snapshot.json 	new file:   drizzle/meta/0006_snapshot.json 	modified:   drizzle/meta/_journal.json 	modified:   frontend/bun.lock 	modified:   frontend/package-lock.json 	modified:   frontend/package.json 	modified:   frontend/src/App.tsx 	modified:   frontend/src/api/api.ts 	new file:   frontend/src/api/auth-api.ts 	new file:   frontend/src/api/hooks/useAuth.ts 	new file:   frontend/src/api/post-api.ts 	new file:   frontend/src/components/AppRoutes.tsx 	new file:   frontend/src/components/ErrorLoadingData.tsx 	modified:   frontend/src/components/Header.tsx 	modified:   frontend/src/components/NavBar.tsx 	new file:   frontend/src/components/SortBy.tsx 	new file:   frontend/src/components/UserAvatar.tsx 	new file:   frontend/src/components/pages/HomePage.tsx 	modified:   frontend/src/components/pages/NewsPage.tsx 	modified:   frontend/src/components/pages/SignIn.tsx 	modified:   frontend/src/components/pages/SignUp.tsx 	new file:   frontend/src/components/pages/TopPage.tsx 	new file:   frontend/src/components/post/PostCard.tsx 	new file:   frontend/src/components/post/PostCreateFrom.tsx 	new file:   frontend/src/components/ui/avatar.tsx 	new file:   frontend/src/components/ui/scroll-area.tsx 	new file:   frontend/src/components/ui/select.tsx 	deleted:    frontend/src/hooks/useAuth.ts 	modified:   frontend/src/index.css 	modified:   frontend/src/lib/utils.ts 	modified:   frontend/src/main.tsx 	modified:   package.json 	modified:   server/db/schema/auth-schema.ts 	modified:   server/db/schema/comments-schema.ts 	modified:   server/db/schema/posts-schema.ts 	modified:   server/db/schema/upvotes-schema.ts 	modified:   server/routes/auth-router.ts 	modified:   server/routes/post-router.ts 	modified:   shared/types.ts

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -55,7 +55,7 @@
   --popover-foreground: oklch(0.985 0 0);
   --primary: oklch(0.985 0 0);
   --primary-foreground: oklch(0.205 0 0);
-  --secondary: #171717;
+  --secondary: #1c1c1c;
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
   --muted-foreground: #c8c9ca;
@@ -128,6 +128,7 @@
   --color-color-3: var(----color-3);
   --color-color-2: var(----color-2);
   --color-color-1: var(----color-1);
+ 
 
   @keyframes aurora-border {
     0%, 100% {
